metrique-macro/src/snapshots/metrique_macro__tests__entry_enum_tag.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
struct Nested {
    value: u32,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
pub struct NestedEntry {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    value: <u32 as metrique::CloseValue>::Closed,
}
const _: () = {
    impl NestedEntry {
        #[doc(hidden)]
        #[inline(always)]
        fn __metrique_descriptor() -> &'static ::metrique::writer::core::EntryDescriptor {
            {
                static __METRIQUE__FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__FIELDS: [::metrique::writer::core::FieldDescriptor; 1usize] = [
                    ::metrique::writer::core::FieldDescriptor::builder("value")
                        .pascal("Value")
                        .snake("value")
                        .kebab("value")
                        .screaming_snake("VALUE")
                        .flags(&__METRIQUE__FLAGS_0)
                        .skipped_flags(&__METRIQUE__SKIPPED_0)
                        .maybe_unit(None)
                        .build(),
                ];
                static __METRIQUE__DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                        "Nested",
                        &__METRIQUE__FIELDS,
                    )
                    .maybe_timestamp(None)
                    .build();
                &__METRIQUE__DESC
            }
        }
    }
    #[expect(deprecated)]
    impl<NS: ::metrique::NameStyle> ::metrique::InflectableEntry<NS> for NestedEntry {
        fn write<'__metrique_write>(
            &'__metrique_write self,
            writer: &mut impl ::metrique::writer::EntryWriter<'__metrique_write>,
        ) {
            let __metrique_self = self;
            ::metrique::writer::EntryWriter::value(
                writer,
                {
                    struct ValuePreserve;
                    impl ::metrique::concat::ConstStr for ValuePreserve {
                        const VAL: &'static str = "value";
                    }
                    struct ValueKebab;
                    impl ::metrique::concat::ConstStr for ValueKebab {
                        const VAL: &'static str = "value";
                    }
                    struct ValuePascal;
                    impl ::metrique::concat::ConstStr for ValuePascal {
                        const VAL: &'static str = "Value";
                    }
                    struct ValueSnake;
                    impl ::metrique::concat::ConstStr for ValueSnake {
                        const VAL: &'static str = "value";
                    }
                    ::metrique::concat::const_str_value::<
                        <NS as ::metrique::NameStyle>::Inflect<
                            ValuePreserve,
                            ValuePascal,
                            ValueSnake,
                            ValueKebab,
                        >,
                    >()
                },
                &__metrique_self.value,
            );
        }
        fn sample_group(
            &self,
        ) -> impl ::std::iter::Iterator<
            Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>),
        > {
            let __metrique_self = self;
            ::std::iter::empty()
        }
        fn descriptors(&self) -> ::metrique::writer::core::Descriptors<'_> {
            ::metrique::writer::core::Descriptors::available(
                ::std::iter::once(
                    ::metrique::writer::core::DescriptorRef::from_static(
                        NestedEntry::__metrique_descriptor(),
                        <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                    ),
                ),
            )
        }
    }
};
impl metrique::CloseValue for &'_ Nested {
    type Closed = NestedEntry;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        NestedEntry {
            value: metrique::CloseValue::close(&__metrique_self_expr!().value),
        }
    }
}
impl metrique::CloseValue for Nested {
    type Closed = NestedEntry;
    fn close(self) -> Self::Closed {
        <&Self>::close(&self)
    }
}

enum Operation {
    Read { bytes: usize },
    Write(Nested),
}
#[doc(hidden)]
pub enum OperationEntry {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    Read {
        #[deprecated(
            note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
        )]
        #[doc(hidden)]
        bytes: <usize as metrique::CloseValue>::Closed,
    },
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    Write(<Nested as metrique::CloseValue>::Closed),
}
const _: () = {
    enum OperationEntrySampleGroupIter<V0, V1> {
        V0(V0),
        V1(V1),
    }
    impl<
        V0: ::std::iter::Iterator<
                Item = (
                    ::std::borrow::Cow<'static, str>,
                    ::std::borrow::Cow<'static, str>,
                ),
            >,
        V1: ::std::iter::Iterator<
                Item = (
                    ::std::borrow::Cow<'static, str>,
                    ::std::borrow::Cow<'static, str>,
                ),
            >,
    > ::std::iter::Iterator for OperationEntrySampleGroupIter<V0, V1> {
        type Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>);
        fn next(&mut self) -> ::std::option::Option<Self::Item> {
            match self {
                OperationEntrySampleGroupIter::V0(iter) => iter.next(),
                OperationEntrySampleGroupIter::V1(iter) => iter.next(),
            }
        }
    }
    #[expect(deprecated)]
    impl<NS: ::metrique::NameStyle> ::metrique::InflectableEntry<NS> for OperationEntry {
        fn write<'__metrique_write>(
            &'__metrique_write self,
            writer: &mut impl ::metrique::writer::EntryWriter<'__metrique_write>,
        ) {
            let __metrique_self = self;
            #[allow(deprecated)]
            match __metrique_self {
                OperationEntry::Read { bytes } => {
                    struct OperationPreserve;
                    impl ::metrique::concat::ConstStr for OperationPreserve {
                        const VAL: &'static str = "operation";
                    }
                    struct OperationKebab;
                    impl ::metrique::concat::ConstStr for OperationKebab {
                        const VAL: &'static str = "operation";
                    }
                    struct OperationPascal;
                    impl ::metrique::concat::ConstStr for OperationPascal {
                        const VAL: &'static str = "Operation";
                    }
                    struct OperationSnake;
                    impl ::metrique::concat::ConstStr for OperationSnake {
                        const VAL: &'static str = "operation";
                    }
                    ::metrique::writer::EntryWriter::value(
                        writer,
                        ::metrique::concat::const_str_value::<
                            <NS as ::metrique::NameStyle>::Inflect<
                                OperationPreserve,
                                OperationPascal,
                                OperationSnake,
                                OperationKebab,
                            >,
                        >(),
                        "Read",
                    );
                    ::metrique::writer::EntryWriter::value(
                        writer,
                        {
                            struct BytesPreserve;
                            impl ::metrique::concat::ConstStr for BytesPreserve {
                                const VAL: &'static str = "bytes";
                            }
                            struct BytesKebab;
                            impl ::metrique::concat::ConstStr for BytesKebab {
                                const VAL: &'static str = "bytes";
                            }
                            struct BytesPascal;
                            impl ::metrique::concat::ConstStr for BytesPascal {
                                const VAL: &'static str = "Bytes";
                            }
                            struct BytesSnake;
                            impl ::metrique::concat::ConstStr for BytesSnake {
                                const VAL: &'static str = "bytes";
                            }
                            ::metrique::concat::const_str_value::<
                                <NS as ::metrique::NameStyle>::Inflect<
                                    BytesPreserve,
                                    BytesPascal,
                                    BytesSnake,
                                    BytesKebab,
                                >,
                            >()
                        },
                        bytes,
                    );
                }
                OperationEntry::Write(v0) => {
                    struct OperationPreserve;
                    impl ::metrique::concat::ConstStr for OperationPreserve {
                        const VAL: &'static str = "operation";
                    }
                    struct OperationKebab;
                    impl ::metrique::concat::ConstStr for OperationKebab {
                        const VAL: &'static str = "operation";
                    }
                    struct OperationPascal;
                    impl ::metrique::concat::ConstStr for OperationPascal {
                        const VAL: &'static str = "Operation";
                    }
                    struct OperationSnake;
                    impl ::metrique::concat::ConstStr for OperationSnake {
                        const VAL: &'static str = "operation";
                    }
                    ::metrique::writer::EntryWriter::value(
                        writer,
                        ::metrique::concat::const_str_value::<
                            <NS as ::metrique::NameStyle>::Inflect<
                                OperationPreserve,
                                OperationPascal,
                                OperationSnake,
                                OperationKebab,
                            >,
                        >(),
                        "Write",
                    );
                    ::metrique::InflectableEntry::<NS>::write(v0, writer);
                }
            }
        }
        fn sample_group(
            &self,
        ) -> impl ::std::iter::Iterator<
            Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>),
        > {
            let __metrique_self = self;
            match __metrique_self {
                OperationEntry::Read { .. } => {
                    OperationEntrySampleGroupIter::V0(::std::iter::empty())
                }
                OperationEntry::Write(v0) => {
                    OperationEntrySampleGroupIter::V1(
                        ::metrique::InflectableEntry::<NS>::sample_group(v0),
                    )
                }
            }
        }
        fn descriptors(&self) -> ::metrique::writer::core::Descriptors<'_> {
            #[allow(deprecated)]
            match self {
                OperationEntry::Read { .. } => {
                    ::metrique::writer::core::Descriptors::available(
                        ::std::iter::once(
                            ::metrique::writer::core::DescriptorRef::from_static(
                                {
                                    static __METRIQUE_V0_FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                    static __METRIQUE_V0_SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                    static __METRIQUE_V0_FLAGS_1: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                    static __METRIQUE_V0_SKIPPED_1: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                    static __METRIQUE_V0_FIELDS: [::metrique::writer::core::FieldDescriptor; 2usize] = [
                                        ::metrique::writer::core::FieldDescriptor::builder(
                                                "operation",
                                            )
                                            .pascal("operation")
                                            .snake("operation")
                                            .kebab("operation")
                                            .screaming_snake("operation")
                                            .flags(&__METRIQUE_V0_FLAGS_0)
                                            .skipped_flags(&__METRIQUE_V0_SKIPPED_0)
                                            .maybe_unit(None)
                                            .build(),
                                        ::metrique::writer::core::FieldDescriptor::builder("bytes")
                                            .pascal("Bytes")
                                            .snake("bytes")
                                            .kebab("bytes")
                                            .screaming_snake("BYTES")
                                            .flags(&__METRIQUE_V0_FLAGS_1)
                                            .skipped_flags(&__METRIQUE_V0_SKIPPED_1)
                                            .maybe_unit(None)
                                            .build(),
                                    ];
                                    static __METRIQUE_V0_DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                                            "Operation::Read",
                                            &__METRIQUE_V0_FIELDS,
                                        )
                                        .maybe_timestamp(None)
                                        .build();
                                    &__METRIQUE_V0_DESC
                                },
                                <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                            ),
                        ),
                    )
                }
                OperationEntry::Write(__v0) => {
                    ::metrique::writer::core::Descriptors::available(
                            ::std::iter::once(
                                ::metrique::writer::core::DescriptorRef::from_static(
                                    {
                                        static __METRIQUE_V1_FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                        static __METRIQUE_V1_SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                                        static __METRIQUE_V1_FIELDS: [::metrique::writer::core::FieldDescriptor; 1usize] = [
                                            ::metrique::writer::core::FieldDescriptor::builder(
                                                    "operation",
                                                )
                                                .pascal("operation")
                                                .snake("operation")
                                                .kebab("operation")
                                                .screaming_snake("operation")
                                                .flags(&__METRIQUE_V1_FLAGS_0)
                                                .skipped_flags(&__METRIQUE_V1_SKIPPED_0)
                                                .maybe_unit(None)
                                                .build(),
                                        ];
                                        static __METRIQUE_V1_DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                                                "Operation::Write",
                                                &__METRIQUE_V1_FIELDS,
                                            )
                                            .maybe_timestamp(None)
                                            .build();
                                        &__METRIQUE_V1_DESC
                                    },
                                    <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                                ),
                            ),
                        )
                        .chain(::metrique::InflectableEntry::<NS>::descriptors(__v0))
                }
            }
        }
    }
};
impl metrique::CloseValue for Operation {
    type Closed = OperationEntry;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        match __metrique_self_expr!() {
            Operation::Read { bytes } => {
                OperationEntry::Read {
                    bytes: metrique::CloseValue::close(bytes),
                }
            }
            Operation::Write(v0) => {
                OperationEntry::Write(::metrique::CloseValue::close(v0))
            }
        }
    }
}
impl ::std::convert::From<&'_ Operation> for &'static str {
    fn from(value: &Operation) -> Self {
        #[allow(deprecated)]
        match value {
            Operation::Read { .. } => "Read",
            Operation::Write(_) => "Write",
        }
    }
}
impl ::std::convert::From<Operation> for &'static str {
    fn from(value: Operation) -> Self {
        <&str as ::std::convert::From<&_>>::from(&value)
    }
}
impl ::metrique::writer::core::SampleGroup for Operation {
    fn as_sample_group(&self) -> ::std::borrow::Cow<'static, str> {
        ::std::borrow::Cow::Borrowed(::std::convert::Into::<&str>::into(self))
    }
}
#[doc = concat!(
    "Metrics guard returned from [`", "Operation",
    "::append_on_drop`], closes the entry and appends the metrics to a sink when dropped."
)]
type OperationGuard<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDrop<
    Operation,
    Q,
>;
#[doc = concat!(
    "Metrics handle returned from [`", "OperationGuard",
    "::handle`], similar to an `Arc<", "OperationGuard", ">`."
)]
type OperationHandle<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDropHandle<
    Operation,
    Q,
>;
impl Operation {
    ///Creates an AppendAndCloseOnDrop that will be automatically appended to `sink` on drop.
    fn append_on_drop<
        Q: ::metrique::writer::EntrySink<::metrique::RootEntry<OperationEntry>> + Send
            + Sync + 'static,
    >(self, sink: Q) -> OperationGuard<Q> {
        ::metrique::append_and_close(self, sink)
    }
}
